--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "langchain>=0.3.27",
     "langchain-community>=0.3.29",
     "langchain-google-genai>=2.0.10",
+    "langchain-huggingface>=0.3.1",
     "langdetect>=1.0.9",
     "python-dotenv>=1.1.1",
     "python-multipart>=0.0.20",
